samples/_failures_safe/1761661155_b46efd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d73b8c56.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
